chore: drop epub4j-native (#42)